--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <!DOCTYPE>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <tittle> strona </tittle>
+    </head>
+    <body>
+        <h1> Witam na nasdzej stronie p[ozdrawiam serdecznie oigladaczyt :)</h1>
+        <a href="podstrona.html"> podstrona </a>
+    </body>
+</html>
