--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <tittle> strona </tittle>
     </head>
-    <body style="background-color: cadetblue; color: color-mix(in srgb, black 50, red 50);">
+    <body style="background-color: cadetblue; color: red">
         <h1> Witam na nasdzej stronie p[ozdrawiam serdecznie oigladaczyt :)</h1>
         <a href="podstrona.html"> podstrona </a>
     </body>
